--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -172,21 +172,21 @@
 <div class="pma-gradient">
     <div class="container">
         <div class="row" id="other-metrics-links">
-            <div class="col-xs-3 col-sm-3 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-3">
                 <h3 class="other-metrics-title"><strong>Otros Indicadores</strong><br/>
                 que puedes consultar</h3>
             </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 container-metrics-links">
+            <div class="col-xs-12 col-sm-6 col-md-3 container-metrics-links">
                 <a href="{% url 'origen_gastos' %}?{% if municipio %}municipio={{municipio.slug}}{% endif %}&{% if year %}year={{ year }}{% endif %}">Origen de Gastos </a>
                 <br>
                 <a href="{% url 'inversion_categoria' %}?{% if municipio %}municipio={{municipio.slug}}{% endif %}&{% if year %}year={{ year }}{% endif %}">Destinos de Inversión</a>
             </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 container-metrics-links">
+            <div class="col-xs-12 col-sm-6 col-md-3 container-metrics-links">
                 <a href="{% url 'gastos_funcion' %}?{% if municipio %}municipio={{municipio.slug}}{% endif %}&{% if year %}year={{ year }}{% endif %}">Gastos de Funcionamiento </a>
                 <br>
                 <a href="{% url 'ahorro_corriente' %}?{% if municipio %}municipio={{municipio.slug}}{% endif %}&{% if year %}year={{ year }}{% endif %}">Ahorro Corriente de Inversión</a>
             </div>
-            <div class="col-md-3 container-metrics-links">
+            <div class="col-md-12 col-sm-6 col-md-3 container-metrics-links">
                 <a href="{% url 'gastos_personal' %}?{% if municipio %}municipio={{municipio.slug}}{% endif %}&{% if year %}year={{ year }}{% endif %}">Gastos de Personal </a>
                 <br>
                 <a href="{% url 'ejecucion_presupuesto' %}?{% if municipio %}municipio={{ municipio.slug }}{% endif %}&{% if year %}year={{ year }}{% endif %}">Ejecución Presupuestaria</a>
