--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -146,6 +146,68 @@
 </div>
 
 {% block section1 %}
+<div class="container">
+    <div class="row">
+        <h2> <strong>{{indicator_name}}</strong> </h2>
+        <h4>Millones de córdobas corrientes</h4>
+        <hr class="pma-line-2">
+        {% block charts %}
+        <div class="col-xs-12 col-sm-12 col-md-7">
+            <div class="chart-update col-xs-1 col-sm-1 col-md-1 text-right">
+                    <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
+                        aria-hidden="true" id="chart-bubble-1" data-chartcontainer="bubble-1"></span>
+                    <span id="chart-pie-1" class="pma-icon pe-7s-graph
+                        pma-fg-gray toggle-chart" data-chartcontainer="pie"></span>
+                    <span id="chart-bar-1" class="pma-icon pe-7s-graph3
+                        pma-fg-gray toggle-chart"  data-chartcontainer="bar"></span>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-11 bubbletree-container chart-container">
+                <div id="bubble-1" class="bubbletree-wrapper view-main">
+                    <div class="bubbletree"></div>
+                </div>
+                <div id='pie' class="view-alternative"> Chart will be rendered here </div>
+                <div id='bar' class="view-alternative"> Chart will be rendered here </div>
+            </div>
+        </div>
+        {% endblock %}
+        <div class="col-md-5 table-responsive">
+            {% block main_table %}
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr class="bg-primary">
+                        <th>Clasificación</th>
+                        {% if periodo_list|keyvalue:year == 'I' %}
+                        <th class="text-right">Inicial</th>
+                        {% else %}
+                            <th class="text-right">Ejecutado</th>
+                        {% endif %}
+                    </tr>
+                </thead>
+                {% for row in cat %}
+                <tr>
+                    <td class="text-left">{{ row.catinversion__nombre }}</td>
+                    {% if periodo_list|keyvalue:year == 'I' %}
+                        <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
+                    {% else %}
+                        <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
+                    {% endif %}
+                </tr>
+                {% endfor %}
+                <tfoot>
+                    <tr class="">
+                        <td>TOTAL</td>
+                        {% if periodo_list|keyvalue:year == 'I' %}
+                            <td class="text-right">{{ asignado|million|intcomma }}</td>
+                        {% else %}
+                            <td class="text-right">{{ ejecutado|million|intcomma|default:"0" }}</td>
+                        {% endif %}
+                    </tr>
+                </tfoot>
+            </table>
+            {% endblock %}
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% block section2 %}
