--- a/core/templates/consolidado_municipal.html
+++ b/core/templates/consolidado_municipal.html
@@ -151,13 +151,14 @@
 {% endblock %}
 
 {% block investment %}
+
 <div class="pma-gradient pma-summary pma-index-inversion-icons">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2> <strong>Inversión Municipal</strong> <br/></h2>
+                        <h2> <strong>Consolidado</strong> <br/>de la Inversión Municipal {{ year }}</h2>
                         <hr class="pma-line-1">
                     </div>
                 </div>
@@ -166,41 +167,42 @@
                         <p>Da clic en cada categoría de inversión para ver sus proyectos relacionados </p>
                         <p>&nbsp;</p>
                     </div>
-                    <div class="row col-xs-11 col-sm-11 col-md-11">
-                        {% for i in categorias %}
+                    <div class="row col-xs-12 col-sm-11 col-md-11">
+                    {% for i in inversion_categoria %}
                         <div class="icons-inversion col-xs-6 col-sm-2 col-md-2 text-center">
-                            <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo}}&inversion__municipio={{municipio.id}}&catinversion={{ i.id }}"><span class="info-box-icon pma-fg-light-green pma-icon {{ i.slug }}">
+                            <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo}}&catinversion={{ i.id }}"><span class="info-box-icon pma-fg-light-green pma-icon {{ i.catinversion__slug }}">
                             </span></a>
-                            <h5 class="text-center"><a href="/core/plan-de-inversion?inversion__anio={{ yea }}&inversion__periodo={{ periodo}}&inversion__municipio={{municipio.id}}&catinversion={{ i.catinversion__id }}" class="blanco"><strong>{{ i.nombre }}</strong></a></h5>
+                            <h5 class="text-center"><a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo}}&catinversion={{ i.catinversion__id }}" class="blanco"><strong>{{ i.catinversion__nombre }}</strong></a> <br />{{ i.ejecutado|div:total_inversion.ejecutado|mul:100|floatformat }}% </h5>
                         </div>
-                        {% if foorloop.last or forloop.counter|divisibleby:6 %}
+                    {% if foorloop.last or forloop.counter|divisibleby:6 %}
                     </div>
                     <div class="row list-icons-inversion">
-                        {% endif %} {% endfor %}
-                        <div class="icons-inversion col-xs-6 col-sm-1 col-md-1">
-                            <div class="text-center ver-mas">
-                                <a class="blanco" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><strong>VER MAS</strong></a>
-                            </div>
-                        </div>
+                    {% endif %}
+                    {% endfor %}
+			<div class="col-xs-12 col-sm-1 col-md-1">
+	                    <div class="text-center ver-mas">
+				<a class="blanco" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><strong>VER MAS</strong></a>
+			    </div>
+			</div>
                     </div>
-                    <div class="otras-categorias col-md-11">
-                        <div class="collapse" id="collapseExample">
-                            <div class="well">
-                                <div class="row">
-                                    {% for i in otras_categorias %}
-                                    <div class="col-xs-6 col-sm-2 col-md-2 text-center icons-inversion">
-                                        <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo}}&inversion__municipio={{municipio.id}}&catinversion={{ i.id }}"><span class="info-box-icon pma-fg-light-green pma-icon {{ i.slug }}"> </span></a>
-                                        <h5 class="text-center"><a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo}}&inversion__municipio={{municipio.id}}&catinversion={{ i.id }}"
-                                                class="blanco"><strong>{{ i.nombre }}</strong></a></h5>
-                                    </div>
-                                    {% if foorloop.last or forloop.counter|divisibleby:6 %}
-                                </div>
-                                <div class="row list-icons-inversion">
-                                    {% endif %} {% endfor %}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+		    <div class="otras-categorias col-md-11">
+			    <div class="collapse" id="collapseExample">
+			    	<div class="well">
+	        		       	<div class="row">
+    					{% for i in inversion_categoria2 %}
+						<div class="icons-inversion col-xs-6 col-sm-2 col-md-2 text-center">
+							<a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo}}&catinversion={{ i.catinversion__id }}"><span class="info-box-icon pma-fg-light-green pma-icon {{ i.catinversion__slug }}"> </span></a>
+				                      	<h5 class="text-center"><a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo}}&catinversion={{ i.id }}" class="blanco"><strong>{{ i.catinversion__nombre }}</strong></a> <br />{{ i.ejecutado|div:total_inversion.ejecutado|mul:100|floatformat }}% </h5>
+						</div>
+		                                {% if foorloop.last or forloop.counter|divisibleby:6 %}
+						</div>
+						<div class="row list-icons-inversion">
+						{% endif %}
+					{% endfor %}
+					</div>
+				</div>
+			    </div>
+			</div>
                 </div>
             </div>
         </div>
