--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -59,8 +59,8 @@
     <div class="row">
         <h2> <strong>Detalle de Gastos</strong> <br/> del período</h2>
         <hr class="pma-line-2">
-        <div class="col-md-7">
-            <div class="chart-update col-xs-1 col-sm-1 col-md-1 float-left">
+        <div class="col-xs-12 col-sm-12 col-md-7">
+            <div class="chart-update col-xs-12 col-sm-12 col-md-1 float-left">
                     <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
                         aria-hidden="true" data-chartcontainer="bubble-1"></span>
                     <span id="chart-pie-1" class="pma-icon pe-7s-graph
@@ -68,7 +68,7 @@
                     <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart" data-chartcontainer="bar"></span>
             </div>
 
-            <div class="col-md-11 bubbletree-container chart-container">
+            <div class="col-xs-12 col-sm-12 col-md-11 bubbletree-container chart-container">
                 <div id="bubble-1" class="bubbletree-wrapper view-main">
                     <div class="bubbletree"></div>
                 </div>
@@ -78,7 +78,7 @@
                 Rubros </div>
             </div>
         </div>
-        <div class="col-md-5 table-responsive">
+        <div class="col-xs-12 col-sm-12 col-md-5 table-responsive">
             <table class="table table-condensed">
                 <tr class="bg-primary">
                     <th>Rubros de gastos</th>
