--- a/core/templates/expenses.html
+++ b/core/templates/expenses.html
@@ -7,28 +7,7 @@
 {{indicator_description}}
 {% endblock %}
 
-{% block section1 %}
-<div class="container">
-    <div class="row">
-        <h2> <strong>Detalle de {{indicator_name}}</strong> <br/> del período</h2>
-        <hr class="pma-line-2">
-        <div class="col-md-7">
-            <div class="chart-update col-md-1 float-left">
-                <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
-                aria-hidden="true" id="chart-bubble-1" data-chartcontainer="bubble-1"></span>
-                <span id="chart-pie-1" class="pma-icon pe-7s-graph
-                pma-fg-gray toggle-chart" aria-hidden="true" data-chartcontainer="pie"></span>
-                <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart" aria-hidden="true" data-chartcontainer="barra"></span>
-            </div>
-            <div class="col-md-11 chart-container bubbletree-container">
-                <div id="bubble-1" class="bubbletree-wrapper view-main">
-                    <div class="bubbletree"></div>
-                </div>
-                <div id="pie" class="view-alternative"></div>
-                <div id="barra" class="view-alternative"></div>
-            </div>
-        </div>
-        <div class="col-md-5 table-responsive">
+            {% block main_table %}
             <table class="table table-striped table-hover" id="datatable-1">
                 <thead>
                     <tr class="bg-primary">
@@ -57,10 +36,7 @@
                     <td class="text-right">{% if asignado %}{{ ejecutado|div:asignado|mul:100|floatformat:1 }}%{% endif %}</td>
                 </tr>
             </table>
-        </div>
-    </div>
-</div>
-{% endblock %}
+        {% endblock %}
 
 {% block section2 %}
 {% if municipio %}
@@ -383,7 +359,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-md-8 col-md-offset-2 table-responsive">
             <table class="table table-condensed">
                 <tr class="bg-primary"> <th>Rubros de gastos</th> <th>Inicial</th>
                     <th>Actualizado</th> <th>Ejecutado</th> 
@@ -416,7 +392,7 @@
         </div>
 
         <div id="detail-2" class="row">
-          <div class="col-md-12">
+          <div class="col-md-12 table-responsive">
             <table class="table table-bordered">
                 <tr class="bg-primary">
                     <td></td>
@@ -533,5 +509,5 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/data.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
-    {{ charts|load_charts:"pie,barra" }}
+    {{ charts|load_charts:"pie,bar" }}
 {% endblock %}
