--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -4,30 +4,8 @@
 {% load core_extras %}
 {% load mathfilters %}
 
-{% block section1 %}
-<div class="container">
-    <div class="row">
-        <h2> <strong>{{indicator_name}}</strong> </h2>
-        <h4>Millones de córdobas corrientes</h4>
-        <hr class="pma-line-2">
-        <div class="col-md-7">
-            <div class="chart-update col-xs-1 col-sm-1 col-md-1 text-right">
-                    <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
-                        aria-hidden="true" id="chart-bubble-1" data-chartcontainer="bubble-1"></span>
-                    <span id="chart-pie-1" class="pma-icon pe-7s-graph
-                        pma-fg-gray toggle-chart" data-chartcontainer="pie"></span>
-                    <span id="chart-bar-1" class="pma-icon pe-7s-graph3
-                        pma-fg-gray toggle-chart"  data-chartcontainer="bar"></span>
-            </div>
-            <div class="col-md-11 bubbletree-container chart-container">
-                <div id="bubble-1" class="bubbletree-wrapper view-main">
-                    <div class="bubbletree"></div>
-                </div>
-                <div id='pie' class="view-alternative"> Chart will be rendered here </div>
-                <div id='bar' class="view-alternative"> Chart will be rendered here </div>
-            </div>
-        </div>
-        <div class="col-md-5 table-responsive">
+
+            {% block main_table %}
             <table class="table table-striped table-hover">
                 <thead>
                     <tr class="bg-primary">
@@ -60,10 +38,7 @@
                     </tr>
                 </tfoot>
             </table>
-        </div>
-    </div>
-</div>
-{% endblock %}
+        {% endblock %}
 
 {% block section2 %}
 {% if not municipio %}
