--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -8,78 +8,9 @@
 {{ municipio }}
 {% endblock %}
 
-{% block indicator_title %}
-<h2 class="text-center">{% if municipio %}<strong>{{ municipio }}</strong><br/>{% else %}Consolidado{% endif %}</h2>
-<hr class="pma-line-5"/>
-<h4 class="text-center">
-    <strong>Origen de los Ingresos {% if year %}{{ year }}{% else %}2015 {% endif %}</strong>
-</h4>
-<p class="text-center metric-description container"> {% block indicator_description %} Son los ingresos que capta el sector público para realizar sus actividades, es decir, es el dinero percibido por el gobierno para financiar sus gastos públicos
-{% endblock %}
-</p>
-{% endblock %}
 
-{% block indicator_summary %}
-<div class="col-xs-6 col-sm-4 col-md-4">
-    <div class="info-box">
-        <span class="info-box-icon pma-icon initial">
-        </span>
-        <div class="info-box-content">
-            <span class="info-box-text"><strong>Inicial {{ asignado|million|intcomma }}</strong></span>
-        </div>
-    </div>
-</div>
-{% if ejecutado %}
-<div class="col-xs-6 col-sm-4 col-md-4">
-    <div class="info-box">
-        <span class="info-box-icon pma-icon executed">
-        </span>
-        <div class="info-box-content">
-            <span class="info-box-text">
-            <strong>Ejecutado {{ ejecutado|million|intcomma }}</strong>
-            </span>
-            <span class="info-box-number pma-green"></span>
-        </div>
-    </div>
-</div>
-{% endif %}
-{% if municipio %}
-<div class="col-xs-12 col-sm-4 col-md-4">
-    <div class="info-box">
-        <span class="info-box-icon pma-icon municipality-category">
-        </span>
-        <div class="info-box-content">
-            <span class="info-box-text"><strong>Categor&iacute;a de municipio {{ mi_clase.clasificacion }}</strong></span>
-            <span class="info-box-number pma-green"></span>
-        </div>
-    </div>
-</div>
-{% endif %}
-{% endblock %}
 
-{% block section1 %}
-<div class="container">
-    <div class="row">
-        <h2> <strong>Ingresos</strong> Totales</h2>
-        <hr class="pma-line-2">
-        <div class="col-md-7">
-            <div class="chart-update col-xs-12 col-sm-1 col-md-1 float-left">
-                <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
-                aria-hidden="true" id="chart-bubble-1" data-chartcontainer="bubble-1"></span>
-                <span id="chart-pie-1" class="pma-icon pe-7s-graph
-                pma-fg-gray toggle-chart" aria-hidden="true"
-                data-chartcontainer="pie"></span>
-                <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart" data-chartcontainer="bar"></span>
-            </div>
-            <div class="col-md-11 bubbletree-container chart-container">
-                <div id="bubble-1" class="bubbletree-wrapper view-main ">
-                    <div class="bubbletree"></div>
-                </div>
-                <div id="pie" class="view-alternative "> </div>
-                <div id='bar' class="view-alternative"> </div>
-            </div>
-        </div>
-        <div class="col-md-5 general-table table-responsive">
+            {% block main_table %}
             <table class="table table-striped table-hover">
                 <thead>
                     <tr class="bg-primary">
@@ -112,10 +43,7 @@
                     </tr>
                 </tfoot>
             </table>
-        </div>
-    </div>
-</div>
-{% endblock %}
+        {% endblock %}
 
 {% block section2 %}
 {% if not municipio %}
@@ -442,7 +370,7 @@
 {% endblock %}
 
 {% block section5 %}
-{% if rubros|total_sum:'actualizado_asignado' > 0 %} <!--No mostramos tablas si no hay actualizacion --!>
+{% if rubros|total_sum:'actualizado_asignado' > 0 %} <!--No mostramos tablas si no hay actualizacion -->
 <div class="container wide">
     <div class="row">
         <div class="col-md-12">
