--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -12,8 +12,8 @@
     <div class="row">
         <h2> <strong>Detalle de {{indicator_name}}</strong> <br/> del período</h2>
         <hr class="pma-line-2">
-        <div class="col-md-7">
-            <div class="chart-update col-md-1">
+        <div class="col-xs-12 col-sm-12 col-md-7">
+            <div class="chart-update colxs-12 col-sm-12 col-md-1">
                     <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
                         aria-hidden="true" id="chart-bubble-1"
                         data-chartcontainer="bubble-1"></span>
@@ -21,7 +21,7 @@
                         pma-fg-gray toggle-chart" aria-hidden="true" data-chartcontainer="pie"></span>
                     <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart" aria-hidden="true" data-chartcontainer="bar"></span>
             </div>
-            <div class="col-md-11 chart-container bubbletree-container">
+            <div class="col-xs-12 col-sm-12 col-md-11 chart-container bubbletree-container">
                 <div id="bubble-1" class="bubbletree-wrapper view-main">
                     <div class="bubbletree" id="bubbletree1"></div>
                 </div>
@@ -29,7 +29,7 @@
                 <div id="bar" class="view-alternative"></div>
             </div>
         </div>
-        <div class="col-md-5 table-responsive">
+        <div class="col-xs-12 col-sm-12 col-md-5 table-responsive">
             <table class="table table-striped table-hover" id="datatable-1">
                 <thead>
                     <tr class="bg-primary">
@@ -68,7 +68,7 @@
     </div>
     <div class="row">
         <hr class="pma-line-2">
-        <div class="col-md-5 table-responsive">
+        <div class="col-xs-12 col-sm-12 col-md-5 table-responsive">
             <table class="table table-striped table-hover" id="datatable-1">
                 <thead>
                     <tr class="bg-primary">
@@ -105,15 +105,15 @@
                 </tr>
             </table>
         </div>
-        <div class="col-md-7">
-            <div class="col-md-11 chart-container bubbletree-container">
+        <div class="col-xs-12 col-sm-12 col-md-7">
+            <div class="col-xs-12 col-sm-12 col-md-11 chart-container bubbletree-container">
                 <div id="bubble-2" class="bubbletree-wrapper view-main">
                     <div class="bubbletree" id="bubbletree2"></div>
                     </div>
                 <div id="pie2" class="view-alternative"></div>
                 <div id="bar2" class="view-alternative"></div>
             </div>
-            <div class="chart-update col-md-1 float-left">
+            <div class="chart-update col-xs-12 col-sm-12 col-md-1 float-left">
                     <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
                         id="chart-bubble-1"
                         data-chartcontainer="bubble-2"></span>
@@ -229,7 +229,7 @@
     </div>
     <div id="detail-1" class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-xs-12 col-sm-12 col-md-12 table-responsive">
                 <h2>{{indicator_name}}</h2>
                 {% if municipio %}
                 <h3>por Municipios de Categoría "{{ mi_clase.clasificacion }}"</h3>
@@ -382,7 +382,7 @@
 </div>
 <div  class="container">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-xs-12 col-sm-12 col-md-6 table-responsive">
             <h3>Ejecución presupuestaria del ingreso corrientes propios</h3>
             <h4 class="text-info">Millones de córdobas corrientes</h4>
             <table class="table table-condensed">
@@ -409,7 +409,7 @@
                 </tr>
             </table>
         </div>
-        <div class="col-md-6">
+        <div class="col-xs-12 col-sm-12 col-md-6 table-responsive">
             {% descargar_excel "ago8" %}
             <h3>Ejecución presupuestaria - Gasto corrientes totales</h3>
             <h4 class="text-info">Millones de córdobas corrientes</h4>
@@ -452,7 +452,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-xs-12 col-sm-12 col-md-6 table-responsive">
           <div class="text-center">
             <h3><strong>Ingresos corrientes propios</strong></h3>
             <hr class="pma-line-4" />
@@ -478,7 +478,7 @@
             </tr>
           </table>
         </div>
-        <div class="col-md-6">
+        <div class="col-xs-12 col-sm-12 col-md-6 table-responsive">
           <div class="text-center">
             <h3><strong>Gastos corrientes totales</strong></h3>
             <hr class="pma-line-4" />
@@ -513,7 +513,7 @@
         </div>
 
         <div id="detail-2" class="row">
-        <div class="col-md-12">
+        <div class="col-xs-12 col-sm-12 col-md-12 table-responsive">
         <h3><strong>Detalle de modificaciones en</strong> ingresos corrientes propios</h3>
         <table class="table table-bordered">
             <tr class="bg-primary">
