--- a/core/templates/expenses.html
+++ b/core/templates/expenses.html
@@ -362,7 +362,7 @@
         <div class="col-md-8 col-md-offset-2 table-responsive">
             <table class="table table-condensed">
                 <tr class="bg-primary"> <th>Rubros de gastos</th> <th>Inicial</th>
-                    <th>Actualizado</th> <th>Ejecutado</th> 
+                    <th>Actualizado</th> <th>Ejecutado</th>
                 </tr>
                 {% for row in rubros %}
                 <tr>
@@ -484,7 +484,7 @@
 
 {% block extra_footer_scripts %}
     <script type="text/javascript" src="{% static 'js/jquery-migrate.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/jquery.history.js' %}"></script>
+    <!-- <script type="text/javascript" src="{% static 'js/jquery.history.js' %}"></script> -->
     <script type="text/javascript" src="{% static 'js/raphael-min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/Tween.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bubbletree.js' %}"></script>
