--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -262,7 +262,7 @@
 
 {% block extra_footer_scripts %}
     <script type="text/javascript" src="{% static 'js/jquery-migrate.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/jquery.history.js' %}"></script>
+    <!-- <script type="text/javascript" src="{% static 'js/jquery.history.js' %}"></script> -->
     <script type="text/javascript" src="{% static 'js/raphael-min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/Tween.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bubbletree.js' %}"></script>
