--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -69,7 +69,7 @@
     </div>
     <div class="timeline container rankin">
         <div class="events-wrapper">
-            <div class="events" style="width: {{ porclase|length|mul:130 }}px;">
+            <div class="events" style="width: {{ porclase|length|add:1|mul:120 }}px;">
                 <ol>
                     {% for row in porclasep %}
                     <li>
@@ -301,12 +301,12 @@
 <div class="cd-horizontal-timeline loaded">
     <div class="timeline container historico">
         <div class="events-wrapper col-md-11">
-            <div class="events" style="{{anuales|length|mul:"100"}}px">
+            <div class="events" style="{{anuales|length|add:1|mul:"150"}}px">
                 <ol>
                     {% for row in anuales %}
                     <li><a href="#0" data-date="01/01/{{ row.ingreso__anio }}"
                     {% if row.ingreso__anio = year|add:"0" %} class="selected" {% endif %}
-                    style="left:{{ forloop.counter|mul:"100" }}px;"><span class="posicion">{{ row.ingreso__anio }}</span>
+                    style="left:{{ forloop.counter0|mul:"150" }}px;"><span class="posicion">{{ row.ingreso__anio }}</span>
                     <br/>
                     {% if row.ingreso__periodo == 'I' %}
                         <span class="line-cifra">{{ row.asignado|million|intcomma }}</span>
@@ -331,7 +331,7 @@
 	    {% for row in anuales %}
 	    <li><a href="#0" data-date="01/01/{{ row.ingreso__anio }}"
 	    {% if row.ingreso__anio = year|add:"0" %} class="selected" {% endif %}
-	    style="left:{{ forloop.counter|mul:"100" }}px;"></a></li>
+	    style="left:{{ forloop.counter0|mul:"150" }}px;"></a></li>
 	    {% endfor %}
         </ol>
     </div> <!-- .events-content -->
