--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -340,12 +340,12 @@
 <div class="cd-horizontal-timeline loaded">
     <div class="timeline container historico">
         <div class="events-wrapper">
-            <div class="events" style="width:1250px">
+            <div class="events" style="width:{{history|length|mul:155}}px">
                 <ol>
                     {% for income, expense in history %}
-                    <li><a href=""  data-date="01/01/{{ row.gasto__anio }}"
+                    <li><a href="" data-date="01/01/{{ row.gasto__anio }} 00:00"
                     {% if expense.gasto__anio = year|add:"0" %} class="selected" {% endif %}
-                    style="left:{{ forloop.counter0|mul:"150" }}px;"><span
+                    style="left:{{ forloop.counter0|mul:"155" }}px;"><span
                         class="posicion">{{ expense.gasto__anio }}</span>
                     <br/>
                     {% if expense.gasto__periodo == 'I' %}
@@ -373,9 +373,9 @@
     <div class="events-content">
         <ol>
           {% for row in anuales %}
-            <li><a href="" data-date="01/01/{{ expense.gasto__anio }}"
+            <li><a href="" data-date="01/01/{{ expense.gasto__anio }} 00:00"
             {% if expense.gasto__anio = year|add:"0" %} class="selected" {% endif %}
-            style="left:{{ forloop.counter|mul:"100" }}px;"></a></li>
+            ></a></li>
           {% endfor %}
         </ol>
     </div> <!-- .events-content -->
