--- a/core/templates/expenses.html
+++ b/core/templates/expenses.html
@@ -276,12 +276,12 @@
 <div class="cd-horizontal-timeline loaded">
     <div class="timeline container historico">
         <div class="events-wrapper">
-            <div class="events" style="width:1250px">
+            <div class="events" style="width:{{ anuales|length|add:1|mul:135 }}px">
                 <ol>
                     {% for row in anuales %}
-                    <li><a href="" data-date="01/01/{{ row.gasto__anio }}"
+                    <li><a href="" data-date="01/01/{{ row.gasto__anio }} 00:00"
                     {% if row.gasto__anio = year|add:"0" %} class="selected" {% endif %}
-                    style="left:{{ forloop.counter0|mul:"100" }}px;"><span class="posicion">{{ row.gasto__anio }}</span>
+                    style="left:{{ forloop.counter|mul:"135" }}px;"><span class="posicion">{{ row.gasto__anio }}</span>
                     <br/>
                     {% if row.gasto__periodo == 'I' %}
                         <span class="line-cifra">{{ row.asignado|million|intcomma }}</span>
@@ -304,9 +304,9 @@
     <div class="events-content">
         <ol>
           {% for row in anuales %}
-            <li><a href="#0" data-date="01/01/{{ row.gasto__anio }}"
+            <li><a href="#0" data-date="01/01/{{ row.gasto__anio }} 00:00"
             {% if row.gasto__anio = year|add:"0" %} class="selected" {% endif %}
-            style="left:{{ forloop.counter|mul:"100" }}px;"></a></li>
+            style="left:{{ forloop.counter|mul:"135" }}px;"></a></li>
           {% endfor %}
         </ol>
     </div> <!-- .events-content -->
