--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -298,15 +298,15 @@
             <h2>Información Histórica<br>
             <strong>Ejecución presupuestaria del gasto {% if not municipio %}Consolidado municipal {% endif %}</strong> </h2>
             <hr class="pma-line-3" />
-            <section class="cd-horizontal-timeline loaded">
+            <section class="cd-horizontal-timeline loaded historico">
                 <div class="timeline">
                     <div class="events-wrapper">
-                        <div class="events" style="width: {{ anuales|length|mul:90 }}px;">
+                        <div class="events" style="width: {{anuales|length|add:1|mul:135}}px;">
                             <ol>
                                 {% for row in anuales %}
-                                <li><a href="#0" data-date="01/01/{{ row.gasto__anio }}"
+                                <li><a href="#0" data-date="01/01/{{row.gasto__anio}} 00:00"
                                 {% if row.gasto__anio = year|add:"0" %} class="selected" {% endif %}
-                                style="left:{{ forloop.counter|mul:90 }}px;"><span class="posicion">{{ row.gasto__anio }}</span><br/>
+                                style="left:{{ forloop.counter|mul:135 }}px;"><span class="posicion">{{ row.gasto__anio }}</span><br/>
                                 {% if row.gasto__periodo == 'I' %}
                                     <span class="line-cifra text-right">{{ row.asignado|million|intcomma }}</span>
                                 {% else %}
@@ -329,22 +329,8 @@
                 <div class="events-content">
                     <ol>
                         {% for row in anuales %}
-                        <li data-date="01/01/{{ row.gasto__anio }}"
+                        <li data-date="01/01/{{ row.gasto__anio }} 00:00"
                             {% if row.gasto__anio = year|add:"0" %} class="selected" {% endif %}>
-                            {% comment %}
-                            <h4>{{ municipio }} {{ row.gasto__anio }}</h2>
-                          <table class="table table-striped">
-                            <tr class="info"><th>Años</th> <th>Inicial</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Inicial" class="link-info">%</a></th></tr>
-                            <tr>
-                                <td>{{ row.gasto__anio }}</td>
-                                <td class="text-right">{{ row.asignado|million|intcomma }}</td>
-                                <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
-                                {% if row.asignado %}
-                                    <td class="montos">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
-                                {% endif %}
-                             </tr>
-                          </table>
-                            {% endcomment %}
                         </li>
                         {% endfor %}
                     </ol>
