--- a/core/static/css/horizontal-timeline.css
+++ b/core/static/css/horizontal-timeline.css
@@ -168,8 +168,8 @@ Main Components
     /* these are the left/right arrows to navigate the timeline */
     position: absolute;
     z-index: 1;
-    top: 50%;
-    bottom: auto;
+    top: auto;
+    bottom: 20%;
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
