--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -275,7 +275,7 @@
                 <ol>
                     {% for row in anuales %}
                     <li><a href="#0" data-date="01/01/{{ row.inversion__anio }} 00:00"
-                    {% if row.inversion__anio = year|add:"0" %} class="selected" {% endif %}
+                    {% if row.inversion__anio == year|add:"0" %} class="selected" {% endif %}
                     style="left:{{ forloop.counter|mul:"135" }}px;"><span class="posicion">{{ row.inversion__anio }}</span>
                     <br/>
                     {% if row.inversion__periodo == 'I' %}
@@ -299,7 +299,7 @@
     <div class="events-content">
         <ol>
             <li data-date="01/01/{{ row.inversion__anio }} 00:00"
-                {% if row.inversion__anio = year|add:"0" %} class="selected" {% endif %}>
+                {% if row.inversion__anio == year|add:"0" %} class="selected" {% endif %}>
             </li>
         </ol>
     </div> <!-- .events-content -->
