--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -305,7 +305,7 @@
                             <ol>
                                 {% for row in anuales %}
                                 <li><a href="#0" data-date="01/01/{{row.gasto__anio}} 00:00"
-                                {% if row.gasto__anio = year|add:"0" %} class="selected" {% endif %}
+                                {% if row.gasto__anio == year|add:"0" %} class="selected" {% endif %}
                                 style="left:{{ forloop.counter|mul:135 }}px;"><span class="posicion">{{ row.gasto__anio }}</span><br/>
                                 {% if row.gasto__periodo == 'I' %}
                                     <span class="line-cifra text-right">{{ row.asignado|million|intcomma }}</span>
@@ -330,7 +330,7 @@
                     <ol>
                         {% for row in anuales %}
                         <li data-date="01/01/{{ row.gasto__anio }} 00:00"
-                            {% if row.gasto__anio = year|add:"0" %} class="selected" {% endif %}>
+                            {% if row.gasto__anio == year|add:"0" %} class="selected" {% endif %}>
                         </li>
                         {% endfor %}
                     </ol>
