--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -308,7 +308,7 @@
                 <ol>
                     {% for row in anuales %}
                     <li><a href="#0" data-date="01/01/{{ row.ingreso__anio }} 00:00"
-                    {% if row.ingreso__anio = year|add:"0" %} class="selected" {% endif %}
+                    {% if row.ingreso__anio == year|add:"0" %} class="selected" {% endif %}
                     style="left:{{ forloop.counter|mul:"135" }}px;"><span class="posicion">{{ row.ingreso__anio }}</span>
                     <br/>
                     {% if row.ingreso__periodo == 'I' %}
@@ -333,7 +333,7 @@
         <ol>
 	    {% for row in anuales %}
 	    <li><a href="#0" data-date="01/01/{{ row.ingreso__anio }} 00:00"
-	    {% if row.ingreso__anio = year|add:"0" %} class="selected" {% endif %}
+	    {% if row.ingreso__anio == year|add:"0" %} class="selected" {% endif %}
 	    style="left:{{ forloop.counter|mul:"130" }}px;"></a></li>
 	    {% endfor %}
         </ol>
