--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -77,7 +77,7 @@
                         {% endif %}
                         {% endfor %}
                         <li><a href="/documento/marco-legal/">Marco Legal</a></li>
-                        <li><a href="/documento/analiResumen Municipalesupuestario/">Entendiendo los Presupuestos Municipales</a></li>
+                        <li><a href="/documento/analisis/Resumen Municipalesupuestario/">Entendiendo los Presupuestos Municipales</a></li>
                     </ul>
                 </li>
                 <li>
