'{% load url from future %}' elimando *DEPRECATED*

--- a/templates/model_report/includes/report_title.html
+++ b/templates/model_report/includes/report_title.html
@@ -1,8 +1,8 @@
-{% load i18n %}{% load url from future %}
+{% load i18n %}
 {% block indicator_title %}
-<h2 class="text-center">{% if municipio %}<strong>{{ municipio }}</strong><br/>{% endif %}</h2>
-<hr class="pma-line-5"/>
-<h4 class="text-center">
-    <strong>Plan de Inversión Municipal</strong>
-</h4>
+    <h2 class="text-center">{% if municipio %}<strong>{{ municipio }}</strong><br/>{% endif %}</h2>
+    <hr class="pma-line-5"/>
+    <h4 class="text-center">
+        <strong>Plan de Inversión Municipal</strong>
+    </h4>
 {% endblock %}
